--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f4f4f4;
+    background-color: #c6eef6;
     margin: 0;
     padding: 0;
 }
@@ -10,7 +10,7 @@ body {
     max-width: 600px;
     margin: 20px auto;
     padding: 20px;
-    background: white;
+    background: rgb(240, 229, 229);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
